# club-tracker

./: .gitignore  Cargo.toml  rustfmt.toml
src/: main.rs
static/: index.html
